# orm64

./: .gitattributes  .gitignore  CMakeLists.txt  Cargo.toml  LICENSE  Makefile  README.md  README.org  build.sh  configure.sh  default.nix  game.lua  hi  install.sh  meson.build  meson_options.txt  server.lua  setup.sh  window.lua
apps/coreutils/: init.lua
apps/graphics-example/: init.lua
apps/hello/: init.lua
default/: help
default/home/guest/: welcome
default/plugins/: myPlugin.c
default/scripts/: myscript.lua
default/software/coloring/: init.lua
default/software/coreutils/: init.lua
default/software/data-example/: init.lua
default/software/gamepads/: init.lua
default/software/graphics-example/: init.lua
default/software/sounds/: README.txt  init.lua
man/: orm64.1  orm64.1.html  orm64.md  orm64.ronn  orm64Api  orm64Api.html  orm64Api.md  orm64Api.ronn  orm64util  orm64util.html  orm64util.ronn
old-rust/: Cargo.toml
old-rust/src/: core.rs
old-rust/src/api/: graphics.rs
old-rust/src/res/: default.lua
old-rust/src/res/doc/: api.md
res/: orm64.1  orm64.md
scripts/: configure.sh  doc.sh  install.sh  man.py  test.sh  update.sh
software/coreutils/: init.lua
software/hello/: init.lua
src/: core.rs  default.lua  graphics.c  graphics.h  lib.rs  lua.c  lua.cpp  lua.h  lua.rs  main.c  main.cpp  main.rs  socket.c  socket.h  user.c  user.cpp  user.h  util.c  util.cpp  util.h
src/api/: graphics.rs  mod.rs
src/apis/: graphics.c  graphics.cpp  graphics.h  multimedia.c  multimedia.cpp  multimedia.h  socket.c  socket.cpp  socket.h
src/apis/graphics/: functions.c  functions.cpp  functions.h
src/apps/hello/: init.lua
src/doc/: api.md  help.md
src/graphics/: functions.c  functions.h
src/orm64lib/: orm64lib.c  orm64lib.h
src/orm64util/: orm64util.c  ormutil.c  ormutil.h
src/ormlib/: ormlib.c
src/res/: default.lua
src/res/doc/: api.md  help.md
src/server/: server.c  server.h
tests/: build.py  hey.lua  ormlibTest.c  ormlibTest.cpp
